zokrates_cli/examples/error/unassigned.zok
def main() -> field:
	field a
	field b = a + 1
	return b